# aas-repository-semantic-matcher

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
aas_repository_semantic_matcher/: matcher.py  xmlization.py
test_repository_server/: Dockerfile  README.md  compose.yaml  put_example_submodels.py
